--- a/BlazorApp13/Server/BlazorApp13.Server.csproj
+++ b/BlazorApp13/Server/BlazorApp13.Server.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.1" />
+    <PackageReference Include="OpenIddict" Version="3.0.0-beta3.20403.69" />
+    <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.0.0-beta3.20403.69" />
+    <PackageReference Include="OpenIddict.Server.AspNetCore" Version="3.0.0-beta3.20403.69" />
   </ItemGroup>
 
   <ItemGroup>
